# ritrovare

./: .gitignore  Cargo.toml  README.md
src/: browser.rs  lib.rs  local.rs  logs.rs  main.rs  model.rs  screen.rs  spinners.rs  utils.rs
