[package]
name = "tabby"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
crossterm = "0.29.0"
ollama-rs = "0.3.4"
ratatui = "0.30.1"
rusqlite = { version = "0.40.1", features = ["bundled", "backup"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = {version = "1.52.3", features=  ["full"]}
url = "2.5.8"
